# StudentManager

./: .gitignore  README.md  Student.cpp  StudentManager.slnx  main.cpp  use.cpp
Assignment 1/: Assignment1.docx
Assignment 1/src/: OnlyConnect.cpp  PlayingFair.cpp  Plotter.cpp  Sandpiles.cpp
Assignment 2/: Assignment2.docx  RisingTides.cpp  RosettaStone.cpp
Assignment 3/: Assignment3.docx  HumanPyramids.cpp  ShiftScheduling.cpp  Sierpinski.cpp  WhatAreYouDoing.cpp
Assignment 4/: Assignment4.docx  DisasterPlanning.cpp  Matchmaker.cpp  Permutations.cpp
Assignment 4/res/matchmaker/: Sample1
Assignment 5/: Assignment5.docx  BigOFunctions.cpp  Combine.cpp
Assignment 5/Matching/: Matchmaker.cpp
Assignment 6/: Apportionment.cpp  Assignment6.docx  HeapPQueue.cpp  HeapPQueue.h
Assignment 7/: Assignment7.docx  LinearProbingHashTable.cpp  LinearProbingHashTable.h  RobinHoodHashTable.cpp  RobinHoodHashTable.h
StudentManager/: CMakeLists.txt  Student.h  StudentManager.vcxproj  StudentManager.vcxproj.filters
StudentManager/include/: Student.h
StudentManager/src/: Student.cpp  main.cpp  use.cpp
